[gd_scene load_steps=18 format=3 uid="uid://4i5csj0s34nb"]

[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_gm4dk"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="2_32qfk"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_5feqe"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3D_resource.gd" id="4_kk8js"]
[ext_resource type="Script" path="res://Scripts/player_controller_third_person.gd" id="5_y8pq1"]
[ext_resource type="PackedScene" uid="uid://cixlwqycoox8h" path="res://addons/phantom_camera/examples/models/3DPrototypeCubeDark.tscn" id="6_6sef2"]
[ext_resource type="FontFile" uid="uid://c4mm3of2mc8o5" path="res://addons/phantom_camera/fonts/Nunito-Black.ttf" id="7_fm76q"]

[sub_resource type="Resource" id="Resource_0yw0t"]
script = ExtResource("3_5feqe")
duration = 0.3
transition = 1
ease = 2

[sub_resource type="Resource" id="Resource_bai5y"]
script = ExtResource("4_kk8js")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
fov = 75.0

[sub_resource type="Resource" id="Resource_xvcjx"]
script = ExtResource("3_5feqe")
duration = 0.25
transition = 1
ease = 2

[sub_resource type="Resource" id="Resource_yf1op"]
script = ExtResource("4_kk8js")
cull_mask = 1048575
h_offset = 1.0
v_offset = 0.0
fov = 50.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_6ltdl"]
points = PackedVector3Array(-0.0376928, -0.228913, -0.266702, 0.0346116, 0.169192, 0.288554, -0.0377577, 0.168968, 0.288169, 0.0104901, 0.32682, -0.195279, 0.288566, -0.169123, 0.0346534, -0.25395, -0.216346, 0.106567, -0.267035, 0.205113, -0.0860178, 0.034695, -0.327095, 0.192267, 0.263098, 0.204495, -0.0978047, 0.0348184, 0.376879, 0.107809, 0.178349, -0.203904, -0.217479, 0.034921, -0.390164, -0.0625408, 0.226544, 0.144072, 0.190484, -0.228944, 0.215393, 0.153941, -0.240828, -0.203368, -0.145174, -0.0377639, 0.156969, -0.291394, 0.058729, -0.156946, 0.288177, -0.157595, -0.143987, 0.250428, 0.130442, 0.143994, -0.265569, -0.13512, 0.364223, -0.0379867, -0.135123, -0.364229, -0.0379874, -0.169047, 0.155551, -0.240873, 0.214891, -0.252533, 0.142709, 0.192269, 0.327087, 0.0347347, 0.192095, -0.326794, -0.0378767, -0.292215, -0.121091, 0.0589582, 0.262239, -0.155898, -0.133443, 0.288581, 0.169132, 0.0346552, -0.110219, -0.338096, 0.143327, -0.10976, 0.312635, 0.178761, 0.1312, 0.349987, -0.0981212, 0.0824662, 0.276183, 0.226602)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_47f0o"]
radius = 0.3
height = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mv4do"]
albedo_color = Color(0.988235, 0.498039, 0.498039, 1)

[sub_resource type="PrismMesh" id="PrismMesh_wg1x3"]
size = Vector3(0.5, 0.5, 0.3)

[sub_resource type="BoxMesh" id="BoxMesh_wsigl"]
size = Vector3(1, 10, 20)

[sub_resource type="BoxMesh" id="BoxMesh_bj3re"]
size = Vector3(1, 7, 7)

[node name="Root" type="Node3D"]

[node name="MainCamera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.499999, 0, -0.5, 0.866023, -0.0194088, 2.25688, 3.01476)
current = true

[node name="PhantomCameraHost" type="Node" parent="MainCamera3D"]
script = ExtResource("1_gm4dk")

[node name="PlayerPhantomCamera3D" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.499999, 0, -0.5, 0.866023, -0.0194088, 2.25688, 3.01476)
script = ExtResource("2_32qfk")
priority_override = false
priority = 10
follow_mode = 6
follow_target = NodePath("../PlayerCharacterBody3D")
follow_parameters/spring_arm/spring_length = 3.5
follow_parameters/spring_arm/collision_mask = 1
follow_parameters/spring_arm/shape = null
follow_parameters/spring_arm/margin = 0.2
follow_parameters/target_offset = Vector3(0, 0, 0)
follow_parameters/damping = true
follow_parameters/damping_value = 10.0
look_at_mode = 0
tween_parameters = SubResource("Resource_0yw0t")
tween_on_load = false
inactive_update_mode = 0
camera_3D_resource = SubResource("Resource_bai5y")

[node name="PlayerAimPhantomCamera3D" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.953716, -0.0104945, 0.300522, 0, 0.99939, 0.0348995, -0.300706, -0.0332842, 0.953135, 0.431374, 1.35423, 1.41338)
script = ExtResource("2_32qfk")
priority_override = false
priority = 0
follow_mode = 6
follow_target = NodePath("../PlayerCharacterBody3D")
follow_parameters/spring_arm/spring_length = 1.5
follow_parameters/spring_arm/collision_mask = 1
follow_parameters/spring_arm/shape = null
follow_parameters/spring_arm/margin = 0.5
follow_parameters/target_offset = Vector3(0, 0.795, 0)
follow_parameters/damping = false
look_at_mode = 0
tween_parameters = SubResource("Resource_xvcjx")
tween_on_load = false
inactive_update_mode = 0
camera_3D_resource = SubResource("Resource_yf1op")

[node name="PlayerCharacterBody3D" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999903, 0.0139622, 0, -0.0139622, 0.999903, 0, 0, 0, 1, -0.0194088, 0.506884, -0.0163251)
collision_layer = 2
script = ExtResource("5_y8pq1")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PlayerCharacterBody3D"]
transform = Transform3D(1, -1.42721e-10, -6.62896e-20, 1.35419e-10, 1, 4.65661e-10, 0, 0, 1, 0.00760986, -0.54498, 0)
shape = SubResource("ConvexPolygonShape3D_6ltdl")

[node name="PlayerArea3D" type="Area3D" parent="PlayerCharacterBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCharacterBody3D/PlayerArea3D"]
transform = Transform3D(1, -1.42721e-10, -6.62471e-20, 1.35419e-10, 1, 4.65661e-10, 0, 0, 1, 0.00760986, -0.54498, 0)
shape = SubResource("ConvexPolygonShape3D_6ltdl")

[node name="PlayerModel" type="Node3D" parent="PlayerCharacterBody3D"]

[node name="PlayerMeshInstance3D" type="MeshInstance3D" parent="PlayerCharacterBody3D/PlayerModel"]
transform = Transform3D(1, -1.42721e-10, -6.62046e-20, 1.35419e-10, 1, 4.65661e-10, 0, 0, 1, 0.00760986, -0.54498, 0)
mesh = SubResource("CapsuleMesh_47f0o")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_mv4do")

[node name="PlayerMeshInstance3D2" type="MeshInstance3D" parent="PlayerCharacterBody3D/PlayerModel"]
transform = Transform3D(1, -1.42721e-10, -6.62046e-20, -7.95903e-10, 1, 4.65661e-10, 2.98023e-08, 0, 1, -0.00135253, 0.0643589, 0)
mesh = SubResource("PrismMesh_wg1x3")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_mv4do")

[node name="DashCooldownTimer" type="Timer" parent="PlayerCharacterBody3D"]
wait_time = 0.6
one_shot = true

[node name="SenseCooldownTimer" type="Timer" parent="PlayerCharacterBody3D"]
wait_time = 5.0
one_shot = true

[node name="ActiveSenseTime" type="Timer" parent="PlayerCharacterBody3D"]
wait_time = 6.0
one_shot = true

[node name="Environment" type="Node" parent="."]

[node name="Floor" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(1000, 0, 0, 0, 1, 0, 0, 0, 1000, 0, -1, 0)
metadata/_edit_lock_ = true

[node name="Wall" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.5, 4.5, 0)
mesh = SubResource("BoxMesh_wsigl")
metadata/_edit_lock_ = true

[node name="Wall5" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.133, 3, -6.5)
mesh = SubResource("BoxMesh_bj3re")
metadata/_edit_lock_ = true

[node name="Wall6" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 3, 0)
mesh = SubResource("BoxMesh_bj3re")
metadata/_edit_lock_ = true

[node name="Wall7" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 3, 0)
mesh = SubResource("BoxMesh_bj3re")
metadata/_edit_lock_ = true

[node name="Wall2" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 4.5, 0)
mesh = SubResource("BoxMesh_wsigl")
metadata/_edit_lock_ = true

[node name="Wall3" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 4.5, 10.5)
mesh = SubResource("BoxMesh_wsigl")
metadata/_edit_lock_ = true

[node name="Wall4" parent="Environment" instance=ExtResource("6_6sef2")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 4.5, -9.5)
mesh = SubResource("BoxMesh_wsigl")
metadata/_edit_lock_ = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 0)
metadata/_edit_lock_ = true

[node name="MovementInstructionsLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0505604, -0.484909, 1.44357)
modulate = Color(0.294118, 1, 0.631373, 1)
text = "[WASD] to move"
font = ExtResource("7_fm76q")
font_size = 48

[node name="MovementInstructionsLabel3" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0505604, -0.484909, 0.817134)
modulate = Color(0.294118, 1, 0.631373, 1)
text = "[Right Mouse Click] to \"aim\""
font = ExtResource("7_fm76q")
font_size = 48
